Fixed horizontal scrolling issues on mobiles phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,3 +361,44 @@ footer {
     }
 
 }
+
+@media only screen and (max-width: 450px){
+
+    body {
+        margin: 1rem;
+    }
+
+    #main-section {
+        height: 500px;
+        margin: 0;
+        display: block;
+        border: 2px solid black;
+        background-color: white;
+    }
+
+    
+    .main-text {
+        font-size: 160%;
+        line-height: 1.5em;
+    }
+
+
+
+    .prod-title {
+        font-size: 100%;
+        margin: 0;
+    }
+
+    .prod p {
+        font-size: 80%;
+    }
+
+    .prod img {
+        width: 80%
+    }
+
+    .our-location {
+        width: 100%;
+    }
+
+}
